# packaged-app

./: README.md  main.py  pyproject.toml
